@@ -26,6 +26,7 @@ import java.util.List;
 import java.util.Set;
 
 import org.apache.cxf.Bus;
+import org.apache.cxf.helpers.JavaUtils;
 import org.apache.cxf.maven_plugin.common.ClassLoaderSwitcher;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugins.annotations.Component;
@@ -43,13 +44,16 @@ import org.sonatype.plexus.build.incremental.BuildContext;
       requiresDependencyResolution = ResolutionScope.TEST)
 public class WADL2JavaMojo extends AbstractCodeGeneratorMojo {
     @Parameter
-    WadlOption wadlOptions[];
+    WadlOption[] wadlOptions;
 
     @Parameter(property = "cxf.wadlRoot", defaultValue = "${basedir}/src/main/resources/wadl")
     File wadlRoot;
 
     @Parameter(property = "cxf.testWadlRoot", defaultValue = "${basedir}/src/test/resources/wadl")
     File testWadlRoot;
+
+    @Parameter(property = "cxf.skipGarbageCollection", defaultValue = "false")
+    boolean skipGarbageCollection;
 
 
     @Component
@@ -73,6 +77,18 @@ public class WADL2JavaMojo extends AbstractCodeGeneratorMojo {
     }
 
     public void execute() throws MojoExecutionException {
+        if (JavaUtils.isJava9Compatible()) {
+            fork = "true";
+            additionalJvmArgs =  "--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED "
+                    + "--add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED "
+                    + "--add-opens java.xml.ws/javax.xml.ws.wsaddressing=ALL-UNNAMED "
+                    + "--add-opens java.base/java.security=ALL-UNNAMED "
+                    + "--add-opens java.base/java.net=ALL-UNNAMED "
+                    + "--add-opens java.base/java.lang=ALL-UNNAMED "
+                    + "--add-opens java.base/java.util=ALL-UNNAMED "
+                    + "--add-opens java.base/java.util.concurrent=ALL-UNNAMED " 
+                    + (additionalJvmArgs == null ? "" : additionalJvmArgs); 
+        }
         System.setProperty("org.apache.cxf.JDKBugHacks.defaultUsesCaches", "true");
 
         File classesDir = new File(classesDirectory);
@@ -95,7 +111,7 @@ public class WADL2JavaMojo extends AbstractCodeGeneratorMojo {
 
         List<WadlOption> effectiveWsdlOptions = createWadlOptionsFromScansAndExplicitWadlOptions(classesDir);
 
-        if (effectiveWsdlOptions.size() == 0) {
+        if (effectiveWsdlOptions.isEmpty()) {
             getLog().info("Nothing to generate");
             return;
         }
@@ -113,7 +129,7 @@ public class WADL2JavaMojo extends AbstractCodeGeneratorMojo {
                 for (WadlOption o : effectiveWsdlOptions) {
                     bus = callCodeGenerator(o, bus, cp);
 
-                    File dirs[] = o.getDeleteDirs();
+                    File[] dirs = o.getDeleteDirs();
                     if (dirs != null) {
                         for (int idx = 0; idx < dirs.length; ++idx) {
                             result = result && deleteDir(dirs[idx]);
@@ -129,7 +145,9 @@ public class WADL2JavaMojo extends AbstractCodeGeneratorMojo {
             classLoaderSwitcher.restoreClassLoader();
         }
 
-        System.gc();
+        if (!skipGarbageCollection) {
+            System.gc();
+        }
     }
 
     /**
