@@ -22,23 +22,22 @@ package org.apache.cxf.osgi.itests;
 
 
 import java.io.File;
-import java.io.IOException;
-import java.net.DatagramSocket;
-import java.net.ServerSocket;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.net.URISyntaxException;
 
 import javax.inject.Inject;
 
-import org.apache.karaf.features.FeaturesService;
-import org.junit.Assert;
-import org.ops4j.pax.exam.MavenUtils;
-import org.ops4j.pax.exam.Option;
-import org.ops4j.pax.exam.options.MavenUrlReference;
 import org.osgi.framework.Bundle;
 import org.osgi.framework.BundleContext;
-import org.osgi.framework.Filter;
-import org.osgi.util.tracker.ServiceTracker;
+import org.osgi.framework.InvalidSyntaxException;
+
+import org.ops4j.pax.exam.MavenUtils;
+import org.ops4j.pax.exam.Option;
+import org.ops4j.pax.exam.karaf.container.internal.JavaVersionUtil;
+import org.ops4j.pax.exam.options.MavenUrlReference;
+import org.ops4j.pax.exam.options.extra.VMOption;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.ops4j.pax.exam.CoreOptions.composite;
 import static org.ops4j.pax.exam.CoreOptions.maven;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
@@ -56,17 +55,12 @@ public class CXFOSGiTestSupport {
     @Inject
     protected BundleContext bundleContext;
 
-    @Inject
-    protected FeaturesService featureService;
-
-    protected ExecutorService executor = Executors.newCachedThreadPool();
-
     protected MavenUrlReference cxfUrl;
-    protected MavenUrlReference karafUrl;
     protected MavenUrlReference amqUrl;
+    protected MavenUrlReference springLegacyUrl;
 
     private static String getKarafVersion() {
-        return MavenUtils.getArtifactVersion("org.apache.karaf", "apache-karaf-minimal");
+        return MavenUtils.getArtifactVersion("org.apache.karaf", "apache-karaf");
     }
 
     /**
@@ -75,17 +69,27 @@ public class CXFOSGiTestSupport {
      * @return
      */
     protected Option cxfBaseConfig() {
-        karafUrl = maven().groupId("org.apache.karaf").artifactId("apache-karaf-minimal").version(getKarafVersion())
-            .type("tar.gz");
+        final String karafVersion = getKarafVersion();
+        final MavenUrlReference karafUrl = maven().groupId("org.apache.karaf").artifactId("apache-karaf")
+                .version(karafVersion).type("tar.gz");
         cxfUrl = maven().groupId("org.apache.cxf.karaf").artifactId("apache-cxf").versionAsInProject()
-            .type("xml").classifier("features");
+                .type("xml").classifier("features");
         amqUrl = maven().groupId("org.apache.activemq")
-        .artifactId("activemq-karaf").type("xml").classifier("features").versionAsInProject();
+                .artifactId("activemq-karaf").type("xml").classifier("features").versionAsInProject();
+        springLegacyUrl = maven().groupId("org.apache.karaf.features").artifactId("spring-legacy")
+                .version(karafVersion).type("xml").classifier("features");
         String localRepo = System.getProperty("localRepository");
         Object urp = System.getProperty("cxf.useRandomFirstPort");
-        return composite(karafDistributionConfiguration()
+        final File loggingCfg;
+        try {
+            loggingCfg = new File(getClass().getResource("/etc/org.ops4j.pax.logging.cfg").toURI());
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+        if (JavaVersionUtil.getMajorVersion() >= 9) {
+            return composite(karafDistributionConfiguration()
                              .frameworkUrl(karafUrl)
-                             .karafVersion(getKarafVersion())
+                             .karafVersion(karafVersion)
                              .name("Apache Karaf")
                              .useDeployFolder(false)
                              .unpackDirectory(new File("target/paxexam/")),
@@ -94,75 +98,68 @@ public class CXFOSGiTestSupport {
                          //debugConfiguration(), // nor this
                          systemProperty("pax.exam.osgi.unresolved.fail").value("true"),
                          systemProperty("java.awt.headless").value("true"),
-                         replaceConfigurationFile("etc/org.ops4j.pax.logging.cfg",
-                                                  new File("src/test/resources/etc/org.ops4j.pax.logging.cfg")),
+                         replaceConfigurationFile("etc/org.ops4j.pax.logging.cfg", loggingCfg),
+                         when(localRepo != null)
+                             .useOptions(editConfigurationFilePut("etc/org.ops4j.pax.url.mvn.cfg",
+                                                                  "org.ops4j.pax.url.mvn.localRepository",
+                                                                  localRepo)),
+                             new VMOption("--add-reads=java.xml=java.logging"),
+                             new VMOption("--add-exports=java.base/"
+                                 + "org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED"),
+                             new VMOption("--patch-module"),
+                             new VMOption("java.base=lib/endorsed/org.apache.karaf.specs.locator-"
+                                 + karafVersion + ".jar"),
+                             new VMOption("--patch-module"),
+                             new VMOption("java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-"
+                                 + karafVersion + ".jar"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.security=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.net=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.lang=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.base/java.util=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.naming/javax.naming.spi=ALL-UNNAMED"),
+                             new VMOption("--add-opens"),
+                             new VMOption("java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED"),
+                             new VMOption("--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED"),
+                             new VMOption("--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED"),
+                             new VMOption("--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED"),
+                             new VMOption("--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED"),
+                             new VMOption("-classpath"),
+                             new VMOption("lib/jdk9plus/*" + File.pathSeparator + "lib/boot/*"),
+                         when(urp != null).useOptions(systemProperty("cxf.useRandomFirstPort").value("true")));
+        } else {
+            return composite(karafDistributionConfiguration()
+                             .frameworkUrl(karafUrl)
+                             .karafVersion(karafVersion)
+                             .name("Apache Karaf")
+                             .useDeployFolder(false)
+                             .unpackDirectory(new File("target/paxexam/")),
+                         //DO NOT COMMIT WITH THIS LINE ENABLED!!!
+                         //KarafDistributionOption.keepRuntimeFolder(),
+                         //debugConfiguration(), // nor this
+                         systemProperty("pax.exam.osgi.unresolved.fail").value("true"),
+                         systemProperty("java.awt.headless").value("true"),
+                         replaceConfigurationFile("etc/org.ops4j.pax.logging.cfg", loggingCfg),
                          when(localRepo != null)
                              .useOptions(editConfigurationFilePut("etc/org.ops4j.pax.url.mvn.cfg",
                                                                   "org.ops4j.pax.url.mvn.localRepository",
                                                                   localRepo)),
                          when(urp != null).useOptions(systemProperty("cxf.useRandomFirstPort").value("true")));
+        }
     }
 
-    protected Option testUtils() {
+    protected static Option testUtils() {
         return mavenBundle().groupId("org.apache.cxf").artifactId("cxf-testutils").versionAsInProject();
-    }
-
-    protected Bundle getInstalledBundle(String symbolicName) {
-        for (Bundle b : bundleContext.getBundles()) {
-            if (b.getSymbolicName().equals(symbolicName)) {
-                return b;
-            }
-        }
-        for (Bundle b : bundleContext.getBundles()) {
-            System.err.println("Bundle: " + b.getSymbolicName());
-        }
-        throw new RuntimeException("Bundle " + symbolicName + " does not exist");
-    }
-
-    /**
-     * Finds a free port starting from the give port numner.
-     *
-     * @return
-     */
-    protected int getFreePort(int port) {
-        while (!isPortAvailable(port)) {
-            port++;
-        }
-        return port;
-    }
-
-    /**
-     * Returns true if port is available for use.
-     *
-     * @param port
-     * @return
-     */
-    public static boolean isPortAvailable(int port) {
-        ServerSocket ss = null;
-        try (DatagramSocket ds = new DatagramSocket(port)) {
-            ss = new ServerSocket(port);
-            ss.setReuseAddress(true);
-            ds.setReuseAddress(true);
-            return true;
-        } catch (IOException e) {
-            // ignore
-        } finally {
-            if (ss != null) {
-                try {
-                    ss.close();
-                } catch (IOException e) {
-                    /* should not be thrown */
-                }
-            }
-        }
-
-        return false;
     }
 
     protected void assertBundleStarted(String name) {
         Bundle bundle = findBundleByName(name);
-        Assert.assertNotNull("Bundle " + name + " should be installed", bundle);
-        Assert.assertEquals("Bundle " + name + " should be started", Bundle.ACTIVE, bundle.getState());
+        assertNotNull("Bundle " + name + " should be installed", bundle);
+        assertEquals("Bundle " + name + " should be started", Bundle.ACTIVE, bundle.getState());
     }
 
     protected Bundle findBundleByName(String symbolicName) {
@@ -174,24 +171,12 @@ public class CXFOSGiTestSupport {
         return null;
     }
 
-    public void assertServicePublished(String filter, int timeout) {
-        try {
-            Filter serviceFilter = bundleContext.createFilter(filter);
-            ServiceTracker<Object, ?> tracker = new ServiceTracker<>(bundleContext, serviceFilter, null);
-            tracker.open();
-            Object service = tracker.waitForService(timeout);
-            tracker.close();
-            if (service == null) {
-                throw new IllegalStateException("Expected service with filter " + filter + " was not found");
-            }
-        } catch (Exception e) {
-            throw new RuntimeException("Unexpected exception occured", e);
-        }
-    }
-
-    public void assertBlueprintNamespacePublished(String namespace, int timeout) {
-        assertServicePublished(String.format("(&(objectClass=org.apache.aries.blueprint.NamespaceHandler)"
-                                             + "(osgi.service.blueprint.namespace=%s))", namespace), timeout);
+    protected void assertBlueprintNamespacePublished(String namespace, long timeout)
+            throws InvalidSyntaxException, InterruptedException {
+        AbstractServerActivator.awaitService(bundleContext,
+                String.format("(&(objectClass=org.apache.aries.blueprint.NamespaceHandler)"
+                        + "(osgi.service.blueprint.namespace=%s))", namespace),
+                timeout);
     }
 
 }
