@@ -27,7 +27,13 @@ import org.apache.cxf.aegis.Context;
 import org.apache.cxf.aegis.type.AegisType;
 import org.apache.cxf.aegis.type.basic.BeanTypeInfo;
 import org.apache.cxf.aegis.xml.stax.ElementReader;
+
+import org.junit.Before;
 import org.junit.Test;
+
+import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
 
 public class SoapArrayTypeTest extends AbstractEncodedTest {
     private static final String[][][] ARRAY_2_3_4 = new String[][][] {
@@ -43,6 +49,7 @@ public class SoapArrayTypeTest extends AbstractEncodedTest {
         },
     };
 
+    @Before
     public void setUp() throws Exception {
         super.setUp();
 
@@ -132,7 +139,7 @@ public class SoapArrayTypeTest extends AbstractEncodedTest {
         Object[] objects;
         // round trip tests
         objects = readWriteReadRef("arrayUrType1.xml", Object[].class);
-        assertArrayEquals(new Object[]{42, new Float(42.42f), "Forty Two"}, objects);
+        assertArrayEquals(new Object[]{42, Float.valueOf(42.42f), "Forty Two"}, objects);
     }
 
     @Test
@@ -175,13 +182,13 @@ public class SoapArrayTypeTest extends AbstractEncodedTest {
         ElementReader reader = new ElementReader(getClass().getResourceAsStream("arrayStructs.xml"));
         Address[] addresses = (Address[]) createArrayType(Address[].class).readObject(reader, context);
         reader.getXMLStreamReader().close();
-        StructTypeTest.validateShippingAddress(addresses[0]);
-        StructTypeTest.validateBillingAddress(addresses[1]);
+        AbstractEncodedTest.validateShippingAddress(addresses[0]);
+        AbstractEncodedTest.validateBillingAddress(addresses[1]);
 
         // round trip tests
         addresses = readWriteReadRef("arrayStructs.xml", Address[].class);
-        StructTypeTest.validateShippingAddress(addresses[0]);
-        StructTypeTest.validateBillingAddress(addresses[1]);
+        AbstractEncodedTest.validateShippingAddress(addresses[0]);
+        AbstractEncodedTest.validateBillingAddress(addresses[1]);
     }
 
     @Test
