@@ -105,14 +105,21 @@ import org.apache.cxf.message.ExchangeImpl;
 import org.apache.cxf.message.Message;
 import org.apache.cxf.message.MessageImpl;
 import org.apache.cxf.transport.http.AbstractHTTPDestination;
-import org.easymock.EasyMock;
 
+import org.easymock.EasyMock;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-public class JAXRSUtilsTest extends Assert {
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
+public class JAXRSUtilsTest {
 
     @Before
     public void setUp() {
@@ -140,7 +147,7 @@ public class JAXRSUtilsTest extends Assert {
         Message messageImpl = createMessage();
         String body = "p1=" + URLEncoder.encode("\u00E4\u00F6\u00FC", enc) + "&p2=2&p2=3";
         messageImpl.put(Message.REQUEST_URI, "/foo");
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         String ct = MediaType.APPLICATION_FORM_URLENCODED;
         if (setEnc) {
             ct += ";charset=" + enc;
@@ -168,20 +175,16 @@ public class JAXRSUtilsTest extends Assert {
         sf.create();
         List<ClassResourceInfo> resources = ((JAXRSServiceImpl)sf.getService()).getClassResourceInfos();
 
-        ClassResourceInfo bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/bookstore", null));
-        assertEquals(bStore.getResourceClass(), org.apache.cxf.jaxrs.resources.BookStore.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.BookStore.class, firstResourceClass(resources, "/bookstore"));
 
-        bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/bookstore/", null));
-        assertEquals(bStore.getResourceClass(),
-                     org.apache.cxf.jaxrs.resources.BookStore.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.BookStore.class, firstResourceClass(resources, "/bookstore/"));
 
-        bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/bookstore/bar", null));
-        assertEquals(bStore.getResourceClass(),
-                     org.apache.cxf.jaxrs.resources.BookStoreNoSubResource.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.BookStoreNoSubResource.class,
+                firstResourceClass(resources, "/bookstore/bar"));
     }
 
-    private static ClassResourceInfo firstResource(Map<ClassResourceInfo, MultivaluedMap<String, String>> map) {
-        return map == null ? null : map.entrySet().iterator().next().getKey();
+    private static Class<?> firstResourceClass(List<ClassResourceInfo> resources, String path) {
+        return JAXRSUtils.selectResourceClass(resources, path, null).keySet().iterator().next().getResourceClass();
     }
 
     @Test
@@ -198,7 +201,6 @@ public class JAXRSUtilsTest extends Assert {
         sf.setServiceBeanObjects(customer);
         sf.setProvider(new ContextProvider<CustomerContext>() {
             public CustomerContext createContext(Message message) {
-                // TODO Auto-generated method stub
                 return contextImpl;
             }
         });
@@ -280,20 +282,15 @@ public class JAXRSUtilsTest extends Assert {
         sf.create();
         List<ClassResourceInfo> resources = ((JAXRSServiceImpl)sf.getService()).getClassResourceInfos();
 
-        ClassResourceInfo bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/1", null));
-        assertEquals(bStore.getResourceClass(), org.apache.cxf.jaxrs.resources.TestResourceTemplate1.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.TestResourceTemplate1.class, firstResourceClass(resources, "/1"));
 
-        bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/1/", null));
-        assertEquals(bStore.getResourceClass(),
-                     org.apache.cxf.jaxrs.resources.TestResourceTemplate1.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.TestResourceTemplate1.class, firstResourceClass(resources, "/1/"));
 
-        bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/1/foo", null));
-        assertEquals(bStore.getResourceClass(),
-                     org.apache.cxf.jaxrs.resources.TestResourceTemplate2.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.TestResourceTemplate2.class,
+                firstResourceClass(resources, "/1/foo"));
 
-        bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/1/foo/bar", null));
-        assertEquals(bStore.getResourceClass(),
-                     org.apache.cxf.jaxrs.resources.TestResourceTemplate2.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.TestResourceTemplate2.class,
+                firstResourceClass(resources, "/1/foo/bar"));
     }
 
     @Test
@@ -303,13 +300,10 @@ public class JAXRSUtilsTest extends Assert {
                               org.apache.cxf.jaxrs.resources.TestResourceTemplate3.class);
         sf.create();
         List<ClassResourceInfo> resources = ((JAXRSServiceImpl)sf.getService()).getClassResourceInfos();
-        ClassResourceInfo bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/", null));
-        assertEquals(bStore.getResourceClass(), org.apache.cxf.jaxrs.resources.TestResourceTemplate3.class);
+        assertEquals(org.apache.cxf.jaxrs.resources.TestResourceTemplate3.class, firstResourceClass(resources, "/"));
 
-        bStore = firstResource(JAXRSUtils.selectResourceClass(resources, "/test", null));
-        assertEquals(bStore.getResourceClass(),
-                     org.apache.cxf.jaxrs.resources.TestResourceTemplate4.class);
-
+        assertEquals(org.apache.cxf.jaxrs.resources.TestResourceTemplate4.class,
+                firstResourceClass(resources, "/test"));
     }
 
     @Test
@@ -323,44 +317,44 @@ public class JAXRSUtilsTest extends Assert {
 
         //If acceptContentTypes does not specify a specific Mime type, the
         //method is declared with a most specific ProduceMime type is selected.
-        OperationResourceInfo ori = findTargetResourceClass(resources, createMessage2(),
+        OperationResourceInfo ori = findTargetResourceClass(resources, createMessage(),
              "/bookstore/1/books/123/", "GET", new MetadataMap<String, String>(), contentTypes,
              getTypes("application/json,application/xml;q=0.9"));
         assertNotNull(ori);
         assertEquals("getBookJSON", ori.getMethodToInvoke().getName());
 
         //test
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/1/books/123",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/1/books/123",
              "GET", new MetadataMap<String, String>(), contentTypes, getTypes("application/json"));
         assertNotNull(ori);
         assertEquals("getBookJSON", ori.getMethodToInvoke().getName());
 
         //test
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/1/books/123",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/1/books/123",
               "GET", new MetadataMap<String, String>(), contentTypes, getTypes("application/xml"));
         assertNotNull(ori);
         assertEquals("getBook", ori.getMethodToInvoke().getName());
 
         //test
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/1/books",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/1/books",
                       "GET", new MetadataMap<String, String>(), contentTypes,
                       getTypes("application/xml"));
         assertNotNull(ori);
         assertEquals("getBooks", ori.getMethodToInvoke().getName());
 
         //test find POST
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/1/books",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/1/books",
                  "POST", new MetadataMap<String, String>(), contentTypes, getTypes("application/xml"));
         assertNotNull(ori);
         assertEquals("addBook", ori.getMethodToInvoke().getName());
 
         //test find PUT
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/1/books",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/1/books",
             "PUT", new MetadataMap<String, String>(), contentTypes, getTypes("application/xml"));
         assertEquals("updateBook", ori.getMethodToInvoke().getName());
 
         //test find DELETE
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/1/books/123",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/1/books/123",
              "DELETE", new MetadataMap<String, String>(), contentTypes, getTypes("application/xml"));
         assertNotNull(ori);
         assertEquals("deleteBook", ori.getMethodToInvoke().getName());
@@ -403,8 +397,8 @@ public class JAXRSUtilsTest extends Assert {
 
         //If acceptContentTypes does not specify a specific Mime type, the
         //method is declared with a most specific ProduceMime type is selected.
-        MetadataMap<String, String> values = new MetadataMap<String, String>();
-        OperationResourceInfo ori = findTargetResourceClass(resources, createMessage2(), "/1/2/",
+        MetadataMap<String, String> values = new MetadataMap<>();
+        OperationResourceInfo ori = findTargetResourceClass(resources, createMessage(), "/1/2/",
              "GET", values, contentTypes, getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("getBooks", ori.getMethodToInvoke().getName());
@@ -415,8 +409,8 @@ public class JAXRSUtilsTest extends Assert {
         assertEquals("First {id} is 1", "1", values.getFirst("id"));
         assertEquals("Second id is 2", "2", values.get("id").get(1));
 
-        values = new MetadataMap<String, String>();
-        ori = findTargetResourceClass(resources, createMessage2(), "/2",
+        values = new MetadataMap<>();
+        ori = findTargetResourceClass(resources, createMessage(), "/2",
              "POST", values, contentTypes, getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("updateBookStoreInfo", ori.getMethodToInvoke().getName());
@@ -426,8 +420,8 @@ public class JAXRSUtilsTest extends Assert {
                      values.get(URITemplate.FINAL_MATCH_GROUP).size());
         assertEquals("Only the first {id} should've been picked up", "2", values.getFirst("id"));
 
-        values = new MetadataMap<String, String>();
-        ori = findTargetResourceClass(resources, createMessage2(), "/3/4",
+        values = new MetadataMap<>();
+        ori = findTargetResourceClass(resources, createMessage(), "/3/4",
              "PUT", values, contentTypes, getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("updateBook", ori.getMethodToInvoke().getName());
@@ -440,29 +434,6 @@ public class JAXRSUtilsTest extends Assert {
         assertEquals("Only the first {id} should've been picked up", "4", values.getFirst("bookId"));
     }
 
-    private Message createMessage2() {
-        ProviderFactory factory = ServerProviderFactory.getInstance();
-        Message m = new MessageImpl();
-        m.put("org.apache.cxf.http.case_insensitive_queries", false);
-        Exchange e = new ExchangeImpl();
-        m.setExchange(e);
-        e.setInMessage(m);
-        Endpoint endpoint = EasyMock.createMock(Endpoint.class);
-        endpoint.getEndpointInfo();
-        EasyMock.expectLastCall().andReturn(null).anyTimes();
-        endpoint.get("org.apache.cxf.jaxrs.comparator");
-        EasyMock.expectLastCall().andReturn(null);
-        endpoint.size();
-        EasyMock.expectLastCall().andReturn(0).anyTimes();
-        endpoint.isEmpty();
-        EasyMock.expectLastCall().andReturn(true).anyTimes();
-        endpoint.get(ServerProviderFactory.class.getName());
-        EasyMock.expectLastCall().andReturn(factory).anyTimes();
-        EasyMock.replay(endpoint);
-        e.put(Endpoint.class, endpoint);
-        return m;
-    }
-
     @Test
     public void testFindTargetResourceClassWithSubResource() throws Exception {
         JAXRSServiceFactoryBean sf = new JAXRSServiceFactoryBean();
@@ -473,28 +444,28 @@ public class JAXRSUtilsTest extends Assert {
         String contentTypes = "*/*";
 
         OperationResourceInfo ori = findTargetResourceClass(resources,
-               createMessage2(), "/bookstore/books/sub/123", "GET", new MetadataMap<String, String>(), contentTypes,
+               createMessage(), "/bookstore/books/sub/123", "GET", new MetadataMap<String, String>(), contentTypes,
                getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("getBook", ori.getMethodToInvoke().getName());
 
-        ori = findTargetResourceClass(resources, createMessage2(),
+        ori = findTargetResourceClass(resources, createMessage(),
             "/bookstore/books/123/true/chapter/1", "GET", new MetadataMap<String, String>(), contentTypes,
             getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("getNewBook", ori.getMethodToInvoke().getName());
 
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/books",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/books",
             "POST", new MetadataMap<String, String>(), contentTypes, getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("addBook", ori.getMethodToInvoke().getName());
 
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/books",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/books",
              "PUT", new MetadataMap<String, String>(), contentTypes, getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("updateBook", ori.getMethodToInvoke().getName());
 
-        ori = findTargetResourceClass(resources, createMessage2(), "/bookstore/books/123",
+        ori = findTargetResourceClass(resources, createMessage(), "/bookstore/books/123",
             "DELETE", new MetadataMap<String, String>(), contentTypes, getTypes("*/*"));
         assertNotNull(ori);
         assertEquals("deleteBook", ori.getMethodToInvoke().getName());
@@ -598,7 +569,7 @@ public class JAXRSUtilsTest extends Assert {
                                                  MediaType.valueOf("application/json"));
 
         assertEquals(1, candidateList.size());
-        assertTrue(candidateList.get(0).toString().equals("application/json"));
+        assertEquals("application/json", candidateList.get(0).toString());
 
         //test basic
         methodMimeTypes = JAXRSUtils.parseMediaTypes(
@@ -607,7 +578,7 @@ public class JAXRSUtilsTest extends Assert {
                                                       MediaType.valueOf("application/json"));
 
         assertEquals(1, candidateList.size());
-        assertTrue(candidateList.get(0).toString().equals("application/json"));
+        assertEquals("application/json", candidateList.get(0).toString());
 
         //test accept wild card */*
         candidateList = JAXRSUtils.intersectMimeTypes(
@@ -630,19 +601,19 @@ public class JAXRSUtilsTest extends Assert {
         candidateList = JAXRSUtils.intersectMimeTypes("*/*", "application/json");
 
         assertEquals(1, candidateList.size());
-        assertTrue("application/json".equals(candidateList.get(0).toString()));
+        assertEquals("application/json", candidateList.get(0).toString());
 
         //test produce wild card application/*
         candidateList = JAXRSUtils.intersectMimeTypes("application/*", "application/json");
 
         assertEquals(1, candidateList.size());
-        assertTrue("application/json".equals(candidateList.get(0).toString()));
+        assertEquals("application/json", candidateList.get(0).toString());
 
         //test produce wild card */*, accept wild card */*
         candidateList = JAXRSUtils.intersectMimeTypes("*/*", "*/*");
 
         assertEquals(1, candidateList.size());
-        assertTrue("*/*".equals(candidateList.get(0).toString()));
+        assertEquals("*/*", candidateList.get(0).toString());
     }
 
     @Test
@@ -825,7 +796,7 @@ public class JAXRSUtilsTest extends Assert {
         Method m = Customer.class.getMethod("testQuery", argType);
         Message messageImpl = createMessage();
 
-        messageImpl.put(Message.QUERY_STRING, "query=24&query2");
+        messageImpl.put(Message.QUERY_STRING, "query=24&query2=");
         List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
                                                                new ClassResourceInfo(Customer.class)),
                                                            null,
@@ -896,18 +867,18 @@ public class JAXRSUtilsTest extends Assert {
     @Test
     public void testQueryParamAsListWithDefaultValue() throws Exception {
         Class<?>[] argType = {List.class, List.class, List.class, Integer[].class,
-            List.class, List.class, List.class};
+            List.class, List.class, List.class, List.class, List.class};
         Method m = Customer.class.getMethod("testQueryAsList", argType);
         Message messageImpl = createMessage();
         ProviderFactory.getInstance(messageImpl)
             .registerUserProvider(new MyTypeParamConverterProvider());
         messageImpl.put(Message.QUERY_STRING,
-                "query2=query2Value&query2=query2Value2&query3=1&query3=2&query4");
+                "query2=query2Value&query2=query2Value2&query3=1&query3=2&query4=");
         List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
                                                                new ClassResourceInfo(Customer.class)),
                                                            null,
                                                            messageImpl);
-        assertEquals(7, params.size());
+        assertEquals(9, params.size());
         List<String> queryList = (List<String>)params.get(0);
         assertNotNull(queryList);
         assertEquals(1, queryList.size());
@@ -945,6 +916,18 @@ public class JAXRSUtilsTest extends Assert {
         assertEquals(2, queryList6.size());
         assertEquals(Integer.valueOf(1), queryList6.get(0).get());
         assertEquals(Integer.valueOf(2), queryList6.get(1).get());
+
+        List<Long> queryList7 = (List<Long>)params.get(7);
+        assertNotNull(queryList7);
+        assertEquals(2, queryList7.size());
+        assertEquals(1L, queryList7.get(0).longValue());
+        assertEquals(2L, queryList7.get(1).longValue());
+
+        List<Double> queryList8 = (List<Double>)params.get(8);
+        assertNotNull(queryList8);
+        assertEquals(2, queryList8.size());
+        assertEquals(1., queryList8.get(0), 0.);
+        assertEquals(2., queryList8.get(1), 0.);
     }
 
     @Test
@@ -952,21 +935,21 @@ public class JAXRSUtilsTest extends Assert {
         Class<?>[] argType = {String.class, Set.class, String.class, Set.class};
         Method m = Customer.class.getMethod("testCookieParam", argType);
         Message messageImpl = createMessage();
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.add("Cookie", "c1=c1Value");
         messageImpl.put(Message.PROTOCOL_HEADERS, headers);
         List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
                                                                new ClassResourceInfo(Customer.class)),
                                                            null,
                                                            messageImpl);
-        assertEquals(params.size(), 4);
+        assertEquals(4, params.size());
         assertEquals("c1Value", params.get(0));
         Set<Cookie> set1 = CastUtils.cast((Set<?>)params.get(1));
         assertEquals(1, set1.size());
         assertTrue(set1.contains(Cookie.valueOf("c1=c1Value")));
         assertEquals("c2Value", params.get(2));
         Set<Cookie> set2 = CastUtils.cast((Set<?>)params.get(3));
-        assertTrue(set2.contains("c2Value"));
+        assertTrue(set2.contains((Object)"c2Value"));
         assertEquals(1, set2.size());
 
     }
@@ -976,7 +959,7 @@ public class JAXRSUtilsTest extends Assert {
         Class<?>[] argType = {String.class, String.class, Cookie.class};
         Method m = Customer.class.getMethod("testMultipleCookieParam", argType);
         Message messageImpl = createMessage();
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.add("Cookie", "c1=c1Value; c2=c2Value");
         headers.add("Cookie", "c3=c3Value");
         messageImpl.put(Message.PROTOCOL_HEADERS, headers);
@@ -984,7 +967,7 @@ public class JAXRSUtilsTest extends Assert {
                                                                new ClassResourceInfo(Customer.class)),
                                                            null,
                                                            messageImpl);
-        assertEquals(params.size(), 3);
+        assertEquals(3, params.size());
         assertEquals("c1Value", params.get(0));
         assertEquals("c2Value", params.get(1));
         assertEquals("c3Value", ((Cookie)params.get(2)).getValue());
@@ -1093,6 +1076,26 @@ public class JAXRSUtilsTest extends Assert {
     }
 
     @Test
+    public void testQueryParameterDefaultValue() throws Exception {
+        Message messageImpl = createMessage();
+        ProviderFactory.getInstance(messageImpl).registerUserProvider(
+            new GenericObjectParameterHandler());
+        Class<?>[] argType = {String.class, String.class};
+        Method m = Customer.class.getMethod("testGenericObjectParamDefaultValue", argType);
+
+        messageImpl.put(Message.QUERY_STRING, "p1=thequery&p2");
+        List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
+                                                               new ClassResourceInfo(Customer.class)),
+                                                           null,
+                                                           messageImpl);
+        assertEquals(2, params.size());
+        String query = (String)params.get(0);
+        assertEquals("thequery", query);
+        query = (String)params.get(1);
+        assertEquals("thequery", query);
+    }
+
+    @Test
     public void testArrayParamNoProvider() throws Exception {
         Message messageImpl = createMessage();
         Class<?>[] argType = {String[].class};
@@ -1111,7 +1114,7 @@ public class JAXRSUtilsTest extends Assert {
 
     @Test
     public void testWrongType() throws Exception {
-        Class<?>[] argType = {HashMap.class};
+        Class<?>[] argType = {HashMap.class}; //NOPMD
         Method m = Customer.class.getMethod("testWrongType", argType);
         Message messageImpl = createMessage();
         messageImpl.put(Message.QUERY_STRING, "p1=1");
@@ -1215,6 +1218,20 @@ public class JAXRSUtilsTest extends Assert {
         Customer.CustomerBean bean = (Customer.CustomerBean)params.get(0);
         assertEquals("aValue", bean.getA());
     }
+    @Test
+    public void testXmlAdapterString() throws Exception {
+        Method m = Customer.class.getMethod("testXmlAdapter4", String.class);
+        Message messageImpl = createMessage();
+        messageImpl.put(Message.QUERY_STRING, "a=3");
+
+        List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
+                                                               new ClassResourceInfo(Customer.class)),
+                                                           null, messageImpl);
+        assertEquals(1, params.size());
+
+        String ret = (String)params.get(0);
+        assertEquals("Val: 3", ret);
+    }
 
 
     @Test
@@ -1222,11 +1239,11 @@ public class JAXRSUtilsTest extends Assert {
         Class<?>[] argType = {Customer.CustomerBean.class};
         Method m = Customer.class.getMethod("testPathBean", argType);
 
-        MultivaluedMap<String, String> pathTemplates = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> pathTemplates = new MetadataMap<>();
         pathTemplates.add("a", "aValue");
         pathTemplates.add("b", "123");
 
-        MultivaluedMap<String, String> complexPathTemplates = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> complexPathTemplates = new MetadataMap<>();
         complexPathTemplates.add("c", "1");
         complexPathTemplates.add("a", "A");
         complexPathTemplates.add("b", "123");
@@ -1297,7 +1314,7 @@ public class JAXRSUtilsTest extends Assert {
         Method m = Customer.class.getMethod("testFormBean", argType);
         Message messageImpl = createMessage();
         messageImpl.put(Message.REQUEST_URI, "/bar");
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.putSingle("Content-Type", MediaType.APPLICATION_FORM_URLENCODED);
         messageImpl.put(Message.PROTOCOL_HEADERS, headers);
         String body = "a=aValue&b=123&cb=true";
@@ -1312,7 +1329,7 @@ public class JAXRSUtilsTest extends Assert {
         assertNotNull(cb);
 
         assertEquals("aValue", cb.getA());
-        assertEquals(new Long(123), cb.getB());
+        assertEquals(Long.valueOf(123), cb.getB());
         assertTrue(cb.isCb());
     }
 
@@ -1322,7 +1339,7 @@ public class JAXRSUtilsTest extends Assert {
         Method m = Customer.class.getMethod("testFormBean", argType);
         Message messageImpl = createMessage();
         messageImpl.put(Message.REQUEST_URI, "/bar");
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.putSingle("Content-Type", MediaType.APPLICATION_FORM_URLENCODED);
         messageImpl.put(Message.PROTOCOL_HEADERS, headers);
         String body = "a=aValue&b=123&cb=true";
@@ -1349,7 +1366,7 @@ public class JAXRSUtilsTest extends Assert {
         Method m = Customer.class.getMethod("testFormBean", argType);
         Message messageImpl = createMessage();
         messageImpl.put(Message.REQUEST_URI, "/bar");
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.putSingle("Content-Type", MediaType.APPLICATION_FORM_URLENCODED);
         messageImpl.put(Message.PROTOCOL_HEADERS, headers);
         String body = "g.b=1&g.b=2";
@@ -1383,7 +1400,7 @@ public class JAXRSUtilsTest extends Assert {
         assertNotNull(cb);
 
         assertEquals("aValue", cb.getA());
-        assertEquals(new Long(123), cb.getB());
+        assertEquals(Long.valueOf(123), cb.getB());
 
         params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
                                                   new ClassResourceInfo(Customer.class)),
@@ -1394,7 +1411,7 @@ public class JAXRSUtilsTest extends Assert {
         assertNotNull(cb1);
 
         assertEquals("A", cb1.getA());
-        assertEquals(new Long(123), cb1.getB());
+        assertEquals(Long.valueOf(123), cb1.getB());
         List<String> list1 = cb1.getC();
         assertEquals(3, list1.size());
         assertEquals("1", list1.get(0));
@@ -1405,7 +1422,7 @@ public class JAXRSUtilsTest extends Assert {
         assertNotNull(cb2);
 
         assertEquals("B", cb2.getA());
-        assertEquals(new Long(456), cb2.getB());
+        assertEquals(Long.valueOf(456), cb2.getB());
         List<String> list2 = cb2.getC();
         assertEquals(3, list2.size());
         assertEquals("4", list2.get(0));
@@ -1420,7 +1437,7 @@ public class JAXRSUtilsTest extends Assert {
             assertNotNull(cb2E);
 
             assertEquals("B" + idx, cb2E.getA());
-            assertEquals(new Long(456 + idx), cb2E.getB());
+            assertEquals(Long.valueOf(456 + idx), cb2E.getB());
             // ensure C was stripped properly since lists within lists are not supported
             assertNull(cb2E.getC());
             assertNull(cb2E.getD());
@@ -1433,7 +1450,7 @@ public class JAXRSUtilsTest extends Assert {
         assertNotNull(cb3);
 
         assertEquals("C", cb3.getA());
-        assertEquals(new Long(789), cb3.getB());
+        assertEquals(Long.valueOf(789), cb3.getB());
         List<String> list3 = cb3.getC();
         assertEquals(3, list3.size());
         assertEquals("7", list3.get(0));
@@ -1448,7 +1465,7 @@ public class JAXRSUtilsTest extends Assert {
             assertNotNull(cb3E);
 
             assertEquals("C" + idx, cb3E.getA());
-            assertEquals(new Long(789 + idx), cb3E.getB());
+            assertEquals(Long.valueOf(789 + idx), cb3E.getB());
             // ensure C was stripped properly since lists within lists are not supported
             assertNull(cb3E.getC());
             assertNull(cb3E.getD());
@@ -1461,12 +1478,12 @@ public class JAXRSUtilsTest extends Assert {
     @Test
     public void testMultipleQueryParameters() throws Exception {
         Class<?>[] argType = {String.class, String.class, Long.class,
-                              Boolean.TYPE, char.class, String.class};
+                              Boolean.TYPE, char.class, String.class, Boolean.class, String.class};
         Method m = Customer.class.getMethod("testMultipleQuery", argType);
         Message messageImpl = createMessage();
 
         messageImpl.put(Message.QUERY_STRING,
-                        "query=first&query2=second&query3=3&query4=true&query6");
+                        "query=first&query2=second&query3=3&query4=true&query6=&query7=true&query8");
         List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
                                                                new ClassResourceInfo(Customer.class)),
                                                            null, messageImpl);
@@ -1475,13 +1492,17 @@ public class JAXRSUtilsTest extends Assert {
         assertEquals("Second Query Parameter of multiple was not matched correctly",
                      "second", params.get(1));
         assertEquals("Third Query Parameter of multiple was not matched correctly",
-                     new Long(3), params.get(2));
-        assertEquals("Fourth Query Parameter of multiple was not matched correctly",
+                    3L, params.get(2));
+        assertSame("Fourth Query Parameter of multiple was not matched correctly",
                      Boolean.TRUE, params.get(3));
         assertEquals("Fifth Query Parameter of multiple was not matched correctly",
                      '\u0000', params.get(4));
-        assertEquals("Six Query Parameter of multiple was not matched correctly",
+        assertEquals("Sixth Query Parameter of multiple was not matched correctly",
                      "", params.get(5));
+        assertSame("Seventh Query Parameter of multiple was not matched correctly",
+                Boolean.TRUE, params.get(6));
+        assertNull("Eighth Query Parameter of multiple was not matched correctly",
+                params.get(7));
     }
 
     @SuppressWarnings("unchecked")
@@ -1492,7 +1513,7 @@ public class JAXRSUtilsTest extends Assert {
         Method m = Customer.class.getMethod("testMatrixParam", argType);
         Message messageImpl = createMessage();
 
-        messageImpl.put(Message.REQUEST_URI, "/foo;p4=0;p3=3/bar;p1=1;p2/baz;p4=4;p4=5;p5");
+        messageImpl.put(Message.REQUEST_URI, "/foo;p4=0;p3=3/bar;p1=1;p2=/baz;p4=4;p4=5;p5");
         List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
                                                                new ClassResourceInfo(Customer.class)),
                                                            null, messageImpl);
@@ -1511,8 +1532,8 @@ public class JAXRSUtilsTest extends Assert {
         assertEquals("0", list.get(0));
         assertEquals("4", list.get(1));
         assertEquals("5", list.get(2));
-        assertEquals("Sixth Matrix Parameter was not matched correctly",
-                     "", params.get(5));
+        assertNull("Sixth Matrix Parameter was not matched correctly",
+                     params.get(5));
     }
 
     @Test
@@ -1521,7 +1542,7 @@ public class JAXRSUtilsTest extends Assert {
         Method m = Customer.class.getMethod("testPathSegment", argType);
         Message messageImpl = createMessage();
         messageImpl.put(Message.REQUEST_URI, "/bar%20foo;p4=0%201");
-        MultivaluedMap<String, String> values = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> values = new MetadataMap<>();
         values.add("ps", "bar%20foo;p4=0%201");
         List<Object> params = JAXRSUtils.processParameters(new OperationResourceInfo(m,
                                                                new ClassResourceInfo(Customer.class)),
@@ -1553,7 +1574,7 @@ public class JAXRSUtilsTest extends Assert {
         Message messageImpl = createMessage();
         String body = "p1=1&p2=2&p2=3";
         messageImpl.put(Message.REQUEST_URI, "/foo");
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         if (useMediaType) {
             headers.putSingle("Content-Type", MediaType.APPLICATION_FORM_URLENCODED);
         }
@@ -1614,9 +1635,8 @@ public class JAXRSUtilsTest extends Assert {
         assertEquals("3", list.get(1));
     }
 
-    private Map<ClassResourceInfo, MultivaluedMap<String, String>> getMap(ClassResourceInfo cri) {
-
-        return Collections.singletonMap(cri, (MultivaluedMap<String, String>)new MetadataMap<String, String>());
+    private static Map<ClassResourceInfo, MultivaluedMap<String, String>> getMap(ClassResourceInfo cri) {
+        return Collections.singletonMap(cri, new MetadataMap<String, String>());
     }
 
     @Test
@@ -1637,22 +1657,22 @@ public class JAXRSUtilsTest extends Assert {
         md.bind(ori2, Customer.class.getMethod("getItPlain", new Class[]{}));
         cri.setMethodDispatcher(md);
 
-        OperationResourceInfo ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage2(), "GET",
+        OperationResourceInfo ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage(), "GET",
               new MetadataMap<String, String>(), "*/*", getTypes("text/plain"));
 
         assertSame(ori, ori2);
 
-        ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage2(), "GET", new MetadataMap<String, String>(),
+        ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage(), "GET", new MetadataMap<String, String>(),
                                               "*/*", getTypes("text/xml"));
 
         assertSame(ori, ori1);
 
-        ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage2(), "GET", new MetadataMap<String, String>(),
+        ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage(), "GET", new MetadataMap<String, String>(),
                                           "*/*",
                                           sortMediaTypes(getTypes("*/*;q=0.1,text/plain,text/xml;q=0.8")));
 
         assertSame(ori, ori2);
-        ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage2(), "GET", new MetadataMap<String, String>(),
+        ori = JAXRSUtils.findTargetMethod(getMap(cri), createMessage(), "GET", new MetadataMap<String, String>(),
                                           "*/*",
                                           sortMediaTypes(getTypes("*;q=0.1,text/plain,text/xml;q=0.9,x/y")));
 
@@ -1676,7 +1696,7 @@ public class JAXRSUtilsTest extends Assert {
                                                      List.class}),
                 cri);
         ori.setHttpMethod("GET");
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.add("Foo", "bar, baz");
 
         Message m = createMessage();
@@ -1889,7 +1909,7 @@ public class JAXRSUtilsTest extends Assert {
         OperationResourceInfo ori = new OperationResourceInfo(Customer.class.getMethods()[0],
                                                               cri);
         Message m = createMessage();
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.add("AHeader2", "theAHeader2");
         m.put(Message.PROTOCOL_HEADERS, headers);
         m.put(Message.QUERY_STRING, "a_value=aValue&query2=b");
@@ -1907,7 +1927,7 @@ public class JAXRSUtilsTest extends Assert {
                                                               cri);
         Message m = createMessage();
 
-        MultivaluedMap<String, String> headers = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> headers = new MetadataMap<>();
         headers.add("AHeader", "theAHeader");
         m.put(Message.PROTOCOL_HEADERS, headers);
         m.put(Message.QUERY_STRING, "b=bValue");
@@ -2026,7 +2046,7 @@ public class JAXRSUtilsTest extends Assert {
                 cri);
         ori.setHttpMethod("GET");
         ori.setURITemplate(new URITemplate("{id1}/{id2}"));
-        MultivaluedMap<String, String> values = new MetadataMap<String, String>();
+        MultivaluedMap<String, String> values = new MetadataMap<>();
         values.putSingle("id1", "1");
         values.putSingle("id2", "2");
 
@@ -2064,28 +2084,30 @@ public class JAXRSUtilsTest extends Assert {
         return null;
     }
 
-    private Message createMessage() {
-        ProviderFactory factory = ServerProviderFactory.getInstance();
+    private static Message createMessage() {
         Message m = new MessageImpl();
         m.put("org.apache.cxf.http.case_insensitive_queries", false);
         Exchange e = new ExchangeImpl();
         m.setExchange(e);
         e.setInMessage(m);
-        Endpoint endpoint = EasyMock.createMock(Endpoint.class);
-        endpoint.getEndpointInfo();
-        EasyMock.expectLastCall().andReturn(null).anyTimes();
-        endpoint.get(Application.class.getName());
-        EasyMock.expectLastCall().andReturn(null);
-        endpoint.size();
-        EasyMock.expectLastCall().andReturn(0).anyTimes();
-        endpoint.isEmpty();
-        EasyMock.expectLastCall().andReturn(true).anyTimes();
-        endpoint.get(ServerProviderFactory.class.getName());
-        EasyMock.expectLastCall().andReturn(factory).anyTimes();
-        EasyMock.replay(endpoint);
+        Endpoint endpoint = mockEndpoint();
         e.put(Endpoint.class, endpoint);
         return m;
     }
+
+    private static Endpoint mockEndpoint() {
+        Endpoint endpoint = EasyMock.mock(Endpoint.class);
+        EasyMock.expect(endpoint.getEndpointInfo()).andReturn(null).anyTimes();
+        EasyMock.expect(endpoint.get(Application.class.getName())).andReturn(null);
+        EasyMock.expect(endpoint.get("org.apache.cxf.jaxrs.comparator")).andReturn(null);
+        EasyMock.expect(endpoint.size()).andReturn(0).anyTimes();
+        EasyMock.expect(endpoint.isEmpty()).andReturn(true).anyTimes();
+        EasyMock.expect(endpoint.get(ServerProviderFactory.class.getName()))
+                .andReturn(ServerProviderFactory.getInstance()).anyTimes();
+        EasyMock.replay(endpoint);
+        return endpoint;
+    }
+
     static class MyTypeParamConverterProvider
         implements ParamConverterProvider, ParamConverter<MyType<Integer>> {
 
@@ -2110,7 +2132,6 @@ public class JAXRSUtilsTest extends Assert {
 
         @Override
         public String toString(MyType<Integer> value) {
-            // TODO Auto-generated method stub
             return null;
         }
 
@@ -2122,9 +2143,8 @@ public class JAXRSUtilsTest extends Assert {
         public <T> ParamConverter<T> getConverter(Class<T> cls, Type arg1, Annotation[] arg2) {
             if (cls == Locale.class) {
                 return (ParamConverter<T>)this;
-            } else {
-                return null;
             }
+            return null;
         }
 
         public Locale fromString(String s) {
@@ -2134,7 +2154,6 @@ public class JAXRSUtilsTest extends Assert {
 
         @Override
         public String toString(Locale arg0) throws IllegalArgumentException {
-            // TODO Auto-generated method stub
             return null;
         }
 
@@ -2148,9 +2167,8 @@ public class JAXRSUtilsTest extends Assert {
         public <T> ParamConverter<T> getConverter(Class<T> cls, Type arg1, Annotation[] arg2) {
             if (cls == Query.class) {
                 return (ParamConverter<T>)this;
-            } else {
-                return null;
             }
+            return null;
         }
 
         public Query<String> fromString(String s) {
@@ -2159,7 +2177,6 @@ public class JAXRSUtilsTest extends Assert {
 
         @Override
         public String toString(Query<String> arg0) throws IllegalArgumentException {
-            // TODO Auto-generated method stub
             return null;
         }
 
