@@ -27,11 +27,17 @@ import org.apache.cxf.javascript.JavascriptTestUtilities.Notifier;
 import org.apache.cxf.javascript.fortest.SimpleRPCImpl;
 import org.apache.cxf.javascript.fortest.TestBean1;
 import org.apache.cxf.javascript.fortest.TestBean2;
-import org.junit.Before;
-import org.junit.Test;
+import org.apache.cxf.testutil.common.TestUtil;
 import org.mozilla.javascript.Context;
 import org.mozilla.javascript.Scriptable;
 import org.springframework.context.support.GenericApplicationContext;
+
+import org.junit.Before;
+import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 /*
  * We end up here with a part with isElement == true, a non-array element,
@@ -39,6 +45,7 @@ import org.springframework.context.support.GenericApplicationContext;
  */
 
 public class RPCClientTest extends JavascriptRhinoTest {
+    public static final String PORT = TestUtil.getNewPortNumber(RPCClientTest.class);
 
     private static final Logger LOG = LogUtils.getL7dLogger(RPCClientTest.class);
 
@@ -73,7 +80,7 @@ public class RPCClientTest extends JavascriptRhinoTest {
             testUtilities.rhinoCallConvert("simpleTest", Notifier.class,
                                            testUtilities.javaToJS(getAddress()),
                                            "String Parameter",
-                                           testUtilities.javaToJS(new Integer(1776)));
+                                           testUtilities.javaToJS(Integer.valueOf(1776)));
 
         boolean notified = notifier.waitForJavascript(1000 * 10);
         assertTrue(notified);
@@ -91,51 +98,6 @@ public class RPCClientTest extends JavascriptRhinoTest {
         return null;
     }
 
-    private Void beanFunctionCaller(Context context) {
-
-        TestBean1 b1 = new TestBean1();
-        b1.stringItem = "strung";
-        TestBean1[] beans = new TestBean1[3];
-        beans[0] = new TestBean1();
-        beans[0].stringItem = "zerobean";
-        beans[0].beanTwoNotRequiredItem = new TestBean2("bean2");
-        beans[1] = null;
-        beans[2] = new TestBean1();
-        beans[2].stringItem = "twobean";
-        beans[2].optionalIntArrayItem = new int[2];
-        beans[2].optionalIntArrayItem[0] = 4;
-        beans[2].optionalIntArrayItem[1] = 6;
-
-        Object[] jsBeans = new Object[3];
-        jsBeans[0] = testBean1ToJS(testUtilities, context, beans[0]);
-        jsBeans[1] = null;
-        jsBeans[2] = testBean1ToJS(testUtilities, context, beans[2]);
-
-        Scriptable jsBean1 = testBean1ToJS(testUtilities, context, b1);
-        Scriptable jsBeanArray = context.newArray(testUtilities.getRhinoScope(), jsBeans);
-
-        LOG.info("About to call beanFunctionTest " + getAddress());
-        Notifier notifier =
-            testUtilities.rhinoCallConvert("beanFunctionTest", Notifier.class,
-                                           testUtilities.javaToJS(getAddress()),
-                                           jsBean1,
-                                           jsBeanArray);
-        boolean notified = notifier.waitForJavascript(1000 * 10);
-        assertTrue(notified);
-        Integer errorStatus = testUtilities.rhinoEvaluateConvert("globalErrorStatus", Integer.class);
-        assertNull(errorStatus);
-        String errorText = testUtilities.rhinoEvaluateConvert("globalErrorStatusText", String.class);
-        assertNull(errorText);
-
-        // this method returns void.
-        Scriptable responseObject = (Scriptable)testUtilities.rhinoEvaluate("globalResponseObject");
-        // there is no response, this thing returns 'void'
-        assertNull(responseObject);
-        SimpleRPCImpl impl = getBean(SimpleRPCImpl.class, "rpc-service");
-        TestBean1 b1returned = impl.getLastBean();
-        assertEquals(b1, b1returned);
-        return null;
-    }
 
     @Test
     public void callSimple() {
@@ -149,16 +111,6 @@ public class RPCClientTest extends JavascriptRhinoTest {
         });
     }
 
-    @org.junit.Ignore
-    @Test
-    public void callFunctionWithBeans() {
-        LOG.info("about to call beanFunctionTest");
-        testUtilities.runInsideContext(Void.class, new JSRunnable<Void>() {
-            public Void run(Context context) {
-                return beanFunctionCaller(context);
-            }
-        });
-    }
 
     public static Scriptable testBean1ToJS(JavascriptTestUtilities testUtilities,
                                            Context context,
