@@ -39,17 +39,21 @@ import org.apache.cxf.transport.Conduit;
 import org.apache.cxf.transport.Destination;
 import org.apache.neethi.Assertion;
 import org.apache.neethi.Policy;
+
 import org.easymock.EasyMock;
 import org.easymock.IMocksControl;
-
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.fail;
 
 /**
  *
  */
-public class EffectivePolicyImplTest extends Assert {
+public class EffectivePolicyImplTest {
 
     private IMocksControl control;
     private Message msg = new MessageImpl();
@@ -57,14 +61,13 @@ public class EffectivePolicyImplTest extends Assert {
     @Before
     public void setUp() {
         control = EasyMock.createNiceControl();
-        new Integer(4);
+        Integer.valueOf(4);
     }
 
-    @SuppressWarnings("unchecked")
     private List<Interceptor<? extends Message>> createMockInterceptorList() {
         Interceptor<? extends Message> i = control.createMock(Interceptor.class);
         Interceptor<? extends Message> m = i;
-        List<Interceptor<? extends Message>> a = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> a = new ArrayList<>();
         a.add(m);
         return a;
     }
@@ -297,7 +300,6 @@ public class EffectivePolicyImplTest extends Assert {
         testInitialiseInterceptors(true, true);
     }
 
-    @SuppressWarnings("unchecked")
     private void testInitialiseInterceptors(boolean useIn, boolean fault) {
         EffectivePolicyImpl epi = new EffectivePolicyImpl();
         List<Assertion> alternative = new ArrayList<>();
@@ -314,7 +316,7 @@ public class EffectivePolicyImplTest extends Assert {
 
         control.reset();
         setupPolicyInterceptorProviderRegistry(engine, reg);
-        List<Interceptor<? extends Message>> il = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> il = new ArrayList<>();
         setupRegistryInterceptors(useIn, fault, reg, null, il);
         PolicyAssertion a = control.createMock(PolicyAssertion.class);
         alternative.add(a);
@@ -327,7 +329,7 @@ public class EffectivePolicyImplTest extends Assert {
         setupPolicyInterceptorProviderRegistry(engine, reg);
         QName qn = new QName("http://x.y.z", "a");
         EasyMock.expect(a.getName()).andReturn(qn);
-        il = new ArrayList<Interceptor<? extends Message>>();
+        il = new ArrayList<>();
         setupRegistryInterceptors(useIn, fault, reg, qn, il);
         control.replay();
         epi.initialiseInterceptors(engine, useIn, fault, msg);
@@ -338,7 +340,7 @@ public class EffectivePolicyImplTest extends Assert {
         setupPolicyInterceptorProviderRegistry(engine, reg);
         EasyMock.expect(a.getName()).andReturn(qn);
         Interceptor<Message> pi = control.createMock(Interceptor.class);
-        il = new ArrayList<Interceptor<? extends Message>>();
+        il = new ArrayList<>();
         il.add(pi);
         setupRegistryInterceptors(useIn, fault, reg, qn, il);
         control.replay();
