@@ -27,16 +27,20 @@ import javax.xml.namespace.QName;
 
 import org.apache.cxf.interceptor.Interceptor;
 import org.apache.cxf.message.Message;
+
 import org.easymock.EasyMock;
 import org.easymock.IMocksControl;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 /**
  *
  */
-public class PolicyInterceptorProviderRegistryImplTest extends Assert {
+public class PolicyInterceptorProviderRegistryImplTest {
 
     private static final QName ASSERTION = new QName("testns", "test");
     private static final QName WRONG_ASSERTION = new QName("testns", "wrong");
@@ -45,7 +49,7 @@ public class PolicyInterceptorProviderRegistryImplTest extends Assert {
     @Before
     public void setUp() {
         control = EasyMock.createNiceControl();
-        new Integer(4);
+        Integer.valueOf(4);
     }
 
     @Test
@@ -56,7 +60,6 @@ public class PolicyInterceptorProviderRegistryImplTest extends Assert {
     }
 
     @Test
-    @SuppressWarnings("unchecked")
     public void testRegister() {
         PolicyInterceptorProviderRegistryImpl reg = new PolicyInterceptorProviderRegistryImpl();
         PolicyInterceptorProvider pp = control.createMock(PolicyInterceptorProvider.class);
@@ -65,14 +68,14 @@ public class PolicyInterceptorProviderRegistryImplTest extends Assert {
         Interceptor<Message> pif = control.createMock(Interceptor.class);
         Interceptor<Message> po = control.createMock(Interceptor.class);
         Interceptor<Message> pof = control.createMock(Interceptor.class);
-        List<Interceptor<? extends Message>> pil = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> pil = new ArrayList<>();
         pil.add(pi1);
         pil.add(pi2);
-        List<Interceptor<? extends Message>> pifl = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> pifl = new ArrayList<>();
         pifl.add(pif);
-        List<Interceptor<? extends Message>> pol = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> pol = new ArrayList<>();
         pol.add(po);
-        List<Interceptor<? extends Message>> pofl = new ArrayList<Interceptor<? extends Message>>();
+        List<Interceptor<? extends Message>> pofl = new ArrayList<>();
         pofl.add(pof);
         EasyMock.expect(pp.getInInterceptors()).andReturn(pil);
         EasyMock.expect(pp.getInFaultInterceptors()).andReturn(pifl);
