@@ -23,6 +23,7 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Method;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Date;
@@ -63,15 +64,22 @@ import org.apache.cxf.ws.rm.persistence.RMMessage;
 import org.apache.cxf.ws.rm.persistence.RMStore;
 import org.apache.cxf.ws.rm.v200702.CreateSequenceResponseType;
 import org.apache.cxf.ws.rm.v200702.Identifier;
+
 import org.easymock.Capture;
 import org.easymock.EasyMock;
 import org.easymock.IMocksControl;
-
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-public class RMManagerTest extends Assert {
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
+public class RMManagerTest {
 
     private static final String MULTIPART_TYPE = "multipart/related; type=\"text/xml\";"
         + " boundary=\"uuid:74b6a245-2e17-40eb-a86c-308664e18460\"; start=\"<root."
@@ -316,7 +324,7 @@ public class RMManagerTest extends Assert {
         Message message = control.createMock(Message.class);
         Exchange exchange = control.createMock(Exchange.class);
         EasyMock.expect(message.getExchange()).andReturn(exchange).anyTimes();
-        
+
         RMConfiguration config = new RMConfiguration();
         config.setRMNamespace(RM10Constants.NAMESPACE_URI);
         config.setRM10AddressingNamespace(RM10Constants.NAMESPACE_URI);
@@ -428,7 +436,7 @@ public class RMManagerTest extends Assert {
                              EasyMock.eq(false),
                              EasyMock.isA(ProtocolVariation.class),
                              EasyMock.isA(Exchange.class),
-                             CastUtils.cast(EasyMock.isA(HashMap.class), String.class, Object.class));
+                             CastUtils.cast(EasyMock.isA(HashMap.class), String.class, Object.class)); //NOPMD
         EasyMock.expectLastCall().andReturn(createResponse);
         Servant servant = control.createMock(Servant.class);
         EasyMock.expect(rme.getServant()).andReturn(servant);
@@ -567,7 +575,7 @@ public class RMManagerTest extends Assert {
         cos.flush();
         m1.setContent(cos);
         m1.setTo("toAddress");
-        m1.setMessageNumber(new Long(10));
+        m1.setMessageNumber(Long.valueOf(10));
         m1.setContentType(MULTIPART_TYPE);
         Capture<Message> mc = Capture.newInstance();
 
@@ -646,7 +654,7 @@ public class RMManagerTest extends Assert {
         EasyMock.expect(endpoint.getBinding()).andReturn(binding).anyTimes();
 
         EasyMock.expect(ss.isLastMessage()).andReturn(true).anyTimes();
-        EasyMock.expect(ss.getCurrentMessageNr()).andReturn(new Long(10)).anyTimes();
+        EasyMock.expect(ss.getCurrentMessageNr()).andReturn(Long.valueOf(10)).anyTimes();
         if (null == m) {
             return;
         }
@@ -734,11 +742,11 @@ public class RMManagerTest extends Assert {
         EasyMock.expect(endpoint.getBinding()).andReturn(binding).anyTimes();
 
         EasyMock.expect(ss.isLastMessage()).andReturn(true).anyTimes();
-        EasyMock.expect(ss.getCurrentMessageNr()).andReturn(new Long(10)).anyTimes();
+        EasyMock.expect(ss.getCurrentMessageNr()).andReturn(Long.valueOf(10)).anyTimes();
         if (null == m) {
             return;
         }
-        EasyMock.expect(m.getMessageNumber()).andReturn(new Long(10)).times(2);
+        EasyMock.expect(m.getMessageNumber()).andReturn(Long.valueOf(10)).times(2);
         if (null == conduit) {
             EasyMock.expect(m.getTo()).andReturn("toAddress");
         }
@@ -769,7 +777,7 @@ public class RMManagerTest extends Assert {
         assertNotNull(id1.getValue());
         Identifier id2 = generator.generateSequenceIdentifier();
         assertTrue(id1 != id2);
-        assertTrue(!id1.getValue().equals(id2.getValue()));
+        assertFalse(id1.getValue().equals(id2.getValue()));
         control.replay();
     }
 
@@ -814,16 +822,11 @@ public class RMManagerTest extends Assert {
         byte[] buf = new byte[starting.length()];
         try {
             in.read(buf, 0, buf.length);
-            assertEquals(starting, new String(buf, "utf-8"));
+            assertEquals(starting, new String(buf, StandardCharsets.UTF_8));
+            in.close();
             return true;
         } catch (IOException e) {
             // ignore
-        } finally {
-            try {
-                in.close();
-            } catch (IOException e) {
-                // ignore
-            }
         }
         return false;
     }
