@@ -66,21 +66,21 @@ public class SchemaValidationImpl implements SchemaValidation {
         // an exception.
         List<Serializable> floatIntStringList = occuringStruct.getVarFloatAndVarIntAndVarString();
         floatIntStringList.add(in + "-two");
-        floatIntStringList.add(new Integer(2));
-        floatIntStringList.add(new Float(2.5f));
+        floatIntStringList.add(Integer.valueOf(2));
+        floatIntStringList.add(Float.valueOf(2.5f));
         return occuringStruct;
     }
 
     @Override
     public SomeResponse doSomething(SomeRequest in) throws DoSomethingFault {
         SomeResponse response = new SomeResponse();
-        if (in.getId().equals("1234567890")) {
+        if ("1234567890".equals(in.getId())) {
             response.setTransactionId("aaaaaaaaaaxxx"); // invalid transaction id
-        } else if (in.getId().equals("9999999999")) {
+        } else if ("9999999999".equals(in.getId())) {
             SomeFault someFault = new SomeFault();
             someFault.setErrorCode("1234");
             throw new DoSomethingFault("Fault", someFault);
-        } else if (in.getId().equals("8888888888")) {
+        } else if ("8888888888".equals(in.getId())) {
             SomeFault someFault = new SomeFault();
             someFault.setErrorCode("1");
             throw new DoSomethingFault("Fault", someFault);
@@ -94,7 +94,6 @@ public class SchemaValidationImpl implements SchemaValidation {
 
     public SomeResponseWithHeader doSomethingWithHeader(SomeRequestWithHeader in,
                                                         SomeHeader inHeader) {
-        // TODO Auto-generated method stub
         return null;
     }
 }
