@@ -96,6 +96,10 @@ import org.junit.After;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 /**
  * Tests the addition of WS-RM properties to application messages and the
@@ -422,7 +426,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         // three application messages plus createSequence
 
-        awaitMessages(4, 1, 2000);
+        awaitMessages(4, 1, 1000);
 
         MessageFlow mf = new MessageFlow(outRecorder.getOutboundMessages(),
             inRecorder.getInboundMessages(), Names200408.WSA_NAMESPACE_NAME, RM10Constants.NAMESPACE_URI);
@@ -766,13 +770,13 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             public void handleMessage(Message m) {
                 RMProperties rmps = RMContextUtils.retrieveRMProperties(m, true);
                 if (null != rmps && null != rmps.getSequence()) {
-                    rmps.getSequence().setMessageNumber(new Long(1));
+                    rmps.getSequence().setMessageNumber(Long.valueOf(1));
                 }
             }
         }
         greeterBus.getOutInterceptors().add(new MessageNumberInterceptor());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
 
         greeter.greetMe("one");
         try {
@@ -839,7 +843,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         }
         greeterBus.getOutInterceptors().add(new SequenceIdInterceptor());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
 
         try {
             greeter.greetMe("one");
@@ -938,7 +942,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
 
         greeter.greetMeOneWay("one");
         greeter.greetMeOneWay("two");
@@ -999,7 +1003,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
 
         greeterBus.getOutInterceptors().add(new MessageLossSimulator());
         RMManager manager = greeterBus.getExtension(RMManager.class);
-        manager.getConfiguration().setBaseRetransmissionInterval(new Long(2000));
+        manager.getConfiguration().setBaseRetransmissionInterval(Long.valueOf(2000));
 
         greeter.greetMe("one");
         greeter.greetMe("two");
@@ -1136,7 +1140,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             }
         }
 
-        ClientThread clients[] = new ClientThread[2];
+        ClientThread[] clients = new ClientThread[2];
 
         try {
             for (int i = 0; i < clients.length; i++) {
@@ -1226,7 +1230,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
             }
         }
 
-        ClientThread clients[] = new ClientThread[2];
+        ClientThread[] clients = new ClientThread[2];
 
         try {
             for (int i = 0; i < clients.length; i++) {
@@ -1294,7 +1298,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         }
         // avoid client side resends
         greeterBus.getExtension(RMManager.class).getConfiguration()
-            .setBaseRetransmissionInterval(new Long(60000));
+            .setBaseRetransmissionInterval(Long.valueOf(60000));
 
         greeter.greetMe("one");
         greeter.greetMe("two");
@@ -1800,7 +1804,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
         private Collection<RMMessage> getMessages(Identifier seq, Map<Identifier, Collection<RMMessage>> map) {
             Collection<RMMessage> cm = map.get(seq);
             if (cm == null) {
-                cm = new LinkedList<RMMessage>();
+                cm = new LinkedList<>();
                 map.put(seq, cm);
             }
             return cm;
@@ -1814,7 +1818,7 @@ public class SequenceTest extends AbstractBusClientServerTestBase {
                     it.remove();
                 }
             }
-            if (map.get(sid).size() == 0) {
+            if (map.get(sid).isEmpty()) {
                 map.remove(sid);
             }
         }
